--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
-    "jss": "^9.8.7",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-jss": "^8.6.1",
     "typeface-roboto": "^0.0.54"
   },
   "keywords": [
