--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^3.0.1",
     "fg-loadcss": "^2.0.1",
     "gatsby": "^2.0.0",
+    "gatsby-plugin-google-analytics": "^2.0.6",
     "gatsby-plugin-jss": "^2.0.2",
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-offline": "^2.0.5",
