--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-waypoint": "^8.0.3",
     "typeface-roboto": "^0.0.54"
   },
   "keywords": [
