--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
     "react-waypoint": "^8.0.3",
+    "react-window-dimensions": "^1.0.2",
     "typeface-roboto": "^0.0.54"
   },
   "keywords": [
