--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "dependencies": {
     "@material-ui/core": "^3.1.0",
     "@material-ui/icons": "^3.0.1",
-    "typeface-roboto": "^0.0.54",
     "fg-loadcss": "^2.0.1",
-    "react-jss": "10.8.0",
     "gatsby": "^4.0.0-zz-next.1",
     "gatsby-plugin-image": "^2.0.0-zz-next.1",
     "gatsby-plugin-manifest": "^4.0.0-zz-next.1",
@@ -21,7 +19,10 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-jss": "10.8.0",
+    "react-waypoint": "^8.0.3",
+    "typeface-roboto": "^0.0.54"
   },
   "devDependencies": {
     "prettier": "2.3.2"
