--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "fg-loadcss": "^2.0.1",
     "gatsby": "^4.0.0-zz-next.1",
     "gatsby-plugin-image": "^2.0.0-zz-next.1",
+    "gatsby-plugin-jss": "^3.14.0",
     "gatsby-plugin-manifest": "^4.0.0-zz-next.1",
     "gatsby-plugin-offline": "^5.0.0-zz-next.1",
     "gatsby-plugin-react-helmet": "^5.0.0-zz-next.1",
